--- a/SobolBayesCub-ver-b.tex
+++ b/SobolBayesCub-ver-b.tex
@@ -136,7 +136,7 @@ Cubature, or numerical multivariate integration, is the problem of inferring a n
 \label{FJ:eqn:defn_mu}
 \mu:= \mu(f) := \int_{[0,1]^d} f(\bsx)\, \textup{d}\bsx, 
 \end{equation}
-when no closed-form analytic expression exists. Typically, values of $f$ are accessible through a black-box function routine. Our goal is to construct a cubature, $\widehat{\mu} = \widehat{\mu}_n = \widehat{\mu}_n(f)$, depending only on integrand values at the nodes $\{\bsx_i\}_{i=1}^n$, and determine the $n$ that satisfies the error criterion
+when no closed-form analytic expression exists. Typically, values of $f$ are accessible through a black-box function routine. Our goal is to construct a cubature, $\widehat{\mu}_n = \widehat{\mu}_n(f)$, depending only on integrand values at the nodes $\{\bsx_i\}_{i=1}^n$, and determine the $n$ that satisfies the error criterion
 \begin{equation}
 \label{FJ:eqn:err_crit} 
 \abs{\mu - \widehat{\mu}_n} \leq \varepsilon
@@ -157,7 +157,7 @@ Our approach to fast Bayesian cubature \cite{RatHic19a} emphasizes two key point
     \begin{equation} \label{FJ:eq:Gram}
         \mathsf{C}_\bstheta = \left(  C_\bstheta(\bsx_i,\bsx_j)  \right)_{i,j=1}^n,
     \end{equation}
-    have an eigenvalue-eigenvector decomposition of the form $\mathsf{C}_\bstheta = \mathsf{V} \mathsf{\Lambda}_\bstheta \mathsf{V}^H/n$, where
+    have an eigenvalue-eigenvector decomposition of the form\footnote{The presence of $1/n$ in the eigenvalue-eigenvector decomposition arises from the assumption that the first column of $\mathsf{V}$ is $\bsone$.  It could be removed by assuming that the first column of $\mathsf{V}$ is $\bsone/\sqrt{n}$.} $\mathsf{C}_\bstheta = \mathsf{V} \mathsf{\Lambda}_\bstheta \mathsf{V}^H/n$, where
     \begin{subequations} \label{FJ:eq:fastcompAssump}
 	\begin{align}
 	\label{FJ:eq:fastcompAssumpA}
@@ -199,11 +199,11 @@ We assume the integrand, $f$, is an instance of a real-valued stochastic Gaussia
 		\begin{align}
 			\label{FJ:eqn:CI}
 			&\mathbb{P}_f \left[
-			|\mu-\widehat{\mu}| \leq \textup{err}_{\textup{CI}}
+			|\mu-\widehat{\mu}_n| \leq \textup{err}_{\textup{CI}}
 			\right] = 99\%, \\
 			\intertext{where}
 			\label{FJ:muhatGCV-FB-MLE-Simple}
-			\widehat{\mu} &= \frac 1n \sum_{i=1}^n y_i = \widetilde{y}_1, \\
+			\widehat{\mu}_n &= \frac 1n \sum_{i=1}^n y_i = \widetilde{y}_1, \\
 		\nonumber 
 		\widetilde{\bsy} &:= \mathsf{V}^H \bsy, \\
 		\nonumber
@@ -278,9 +278,9 @@ Our  Bayesian cubature algorithm increases the sample size until the width of th
 		
 		\EndWhile
 		
-		\State Sample size to compute $\widehat{\mu}$, $n \gets n'$
-		\State Compute $\widehat{\mu}$, the approximate integral, according to \eqref{FJ:muhatGCV-FB-MLE-Simple}
-		\State \Return $\widehat{\mu}, \; n$  and $\textup{err}_\textup{CI}$
+		\State Sample size to compute $\widehat{\mu}_n$, $n \gets n'$
+		\State Compute $\widehat{\mu}_n$, the approximate integral, according to \eqref{FJ:muhatGCV-FB-MLE-Simple}
+		\State \Return $\widehat{\mu}_n, \; n$  and $\textup{err}_\textup{CI}$
 	\end{algorithmic}
 \end{algorithm}
 
@@ -565,13 +565,13 @@ Thus to compute $\widetilde{\bsb}$ requires two matrix multiplications by $\math
 The Bayesian cubature algorithm described here the digital shift invariant kernel in \eqref{FJ:eqn:digital_shift_in_kernel} with order $r=1$  and the Bayesian lattice cubature algorithm described in \cite{RatHic19a} have been coded as  \texttt{cubBayesNet\_g} and \texttt{cubBayesLattice\_g}, respectively, in GAIL \cite{ChoEtal21a}.  We illustrate our algorithm for three common examples, which are also discussed in \cite{RatHic19a}.  The first example evaluates a multivariate Gaussian probability, the second example is Keister's function \cite{Kei96}, and the final example is pricing an Asian arithmetic mean option.  For each example we are able to find an ``exact'' answer, either by analytic computation, or by running a numerical algorithm with a very small error tolerance.
 
 The nodes used in \texttt{cubBayesNet\_g} are the randomly scrambled and shifted Sobol' points supplied by MATLAB's Sobol' sequence generator. Four hundred different error tolerances, $\varepsilon$, are randomly chosen such that $\log(\varepsilon)$ has a uniform distribution. 
-For each integral example, each $\varepsilon$, and each stopping criterion---empirical Bayes, full Bayes, and generalized cross-validation---we ran \texttt{cubBayesNet\_g}.  For each run, the execution time is plotted against $\abs{\mu - \widehat{\mu}}/\varepsilon$.  We expect $\abs{\mu - \widehat{\mu}}/\varepsilon$ to be no greater than one, but hope that it is not too much smaller than one, which would indicate that the stopping criterion  is too conservative.
+For each integral example, each $\varepsilon$, and each stopping criterion---empirical Bayes, full Bayes, and generalized cross-validation---we ran \texttt{cubBayesNet\_g}.  For each run, the execution time is plotted against $\abs{\mu - \widehat{\mu}_n}/\varepsilon$.  We expect $\abs{\mu - \widehat{\mu}_n}/\varepsilon$ to be no greater than one, but hope that it is not too much smaller than one, which would indicate that the stopping criterion  is too conservative.
 
 \subsection{Multivariate Gaussian Probability}
 
 This integral is formulated as in \cite{RatHic19a} following the variable transformation introduced by Alan Genz \cite{Gen92}. The simulation results are summarized in Figures \ref{FJ:fig:Sobol-mvn-guaranteed-EB}, \ref{FJ:fig:Sobol-mvn-guaranteed-FB}, and \ref{FJ:fig:Sobol-mvn-guaranteed-GCV}.  In all cases, \texttt{cubBayesNet\_g} returns an approximation within the prescribed error tolerance. For  $\varepsilon=10^{-5}$ with the empirical Bayes stopping criterion, \texttt{cubBayesNet\_g} takes about 3 seconds as shown in Figure~\ref{FJ:fig:Sobol-mvn-guaranteed-EB} whereas using a Mat\'ern kernel requires 30 seconds to obtain the same accuracy as shown in \cite{RatHic19a}. This highlights the speed-up possible using fast Bayesian cubature.
 
-The \texttt{cubBayesNet\_g} uses MATLAB's fast Walsh transform.  This is slower than MATLAB's fast Fourier transform, which is implemented in compiled code. We suspect that this is part of the reason that \texttt{cubBayesLattice\_g} is faster than \texttt{cubBayesNet\_g} for this example. Also, \texttt{cubBayesLattice\_g} here uses higher order kernels whereas higher order digital shift-invariant kernels are inappropriate for these examples. The \texttt{cubBayesLattice\_g} uses on average $n \approx 16{,}000$ samples for $\varepsilon = 10^{-5}$, whereas \texttt{cubBayesNet\_g} uses on average $n \approx 32{,}000$ samples.
+The \texttt{cubBayesNet\_g} uses MATLAB's fast Walsh transform.  This is slower than MATLAB's fast Fourier transform, which is implemented in compiled code. This may help explain why \texttt{cubBayesLattice\_g} is faster than \texttt{cubBayesNet\_g} for this example. Also, \texttt{cubBayesLattice\_g} here uses higher order kernels whereas higher order digital shift-invariant kernels are inappropriate for these examples. The \texttt{cubBayesLattice\_g} uses on average $n \approx 16{,}000$ samples for $\varepsilon = 10^{-5}$, whereas \texttt{cubBayesNet\_g} uses on average $n \approx 32{,}000$ samples.
 
 Amongst the three stopping criteria, GCV achieves an acceptable approximation faster than others but it is less conservative. 
 One can also observe from the figures that the credible intervals are narrower than empirical Bayes as in Figure~\ref{FJ:fig:Sobol-mvn-guaranteed-EB}.
@@ -726,7 +726,7 @@ Also notice that our algorithm \texttt{cubBayesNet\_g}, finished within 40 secon
 A most noticeable aspect from the plots of \texttt{cubBayesNet\_g} is how close the error bounds are to the true error. 
 This shows that the \texttt{cubBayesNet\_g}'s error bounding is not too conservative.
 
-In nearly all of the examples, the ratio $\abs{\mu - \widehat{\mu}}/\varepsilon$  is closer to one for the Bayesian net cubature in comparison to the Bayesian lattice cubature.  
+In nearly all of the examples, the ratio $\abs{\mu - \widehat{\mu}_n}/\varepsilon$  is closer to one for the Bayesian net cubature in comparison to the Bayesian lattice cubature.  
 A possible reason is that the periodization transform speeds the convergence in the former case and makes the error bounds too conservative.
 % This is a matter for further investigation.
 
@@ -771,11 +771,11 @@ As shown in \cite[Give eq numbers]{RatHic19a}, under assumptions \eqref{FJ:eq:fa
 \begin{subequations} \label{FJ:eqn_prob_confidence_interval}
 	\begin{gather}
 		\mathbb{P}_f \left[
-		|\mu-\widehat{\mu}| \leq \textup{err}_{\textup{CI}}
+		|\mu-\widehat{\mu}_n| \leq \textup{err}_{\textup{CI}}
 		\right] = 99\%, \\
 		\intertext{where}
 		\label{FJ:muhatGCV-FB-MLE-Simple}
-		\widehat{\mu} = \frac 1n \sum_{i=1}^n y_i, \\
+		\widehat{\mu}_n = \frac 1n \sum_{i=1}^n y_i, \\
 		\label{FJ:eqn:errcifast}
 		\textup{err}_{\textup{CI}} = 2.58 s \sqrt{1 - n/\lambda_{\bstheta,1} }.
 	\end{gather}
